Added client side validation when adding clothing

--- a/TinyClothes/Views/Clothes/Add.cshtml
+++ b/TinyClothes/Views/Clothes/Add.cshtml
@@ -39,3 +39,13 @@
 
     <input type="submit" value="Add Clothing" />
 </form>
+
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+
+    @* Partial view above auto generates these two
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    *@
+}
