Added some card group items and card links to the card on the Home page

--- a/TinyClothes/Views/Home/Index.cshtml
+++ b/TinyClothes/Views/Home/Index.cshtml
@@ -11,6 +11,14 @@
         <h5 class="card-title">Our Products: </h5>
         <p class="card-text">We sell tiny clothes for your pets and stuffed animals. These are not baby clothes!</p>
     </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Clothes For Babies</li>
+        <li class="list-group-item">Clothes For Pets</li>
+    </ul>
+    <div class="card-body">
+        <a class="card-link" asp-controller="Clothes" asp-action="ShowAll">Inventory</a>
+        <a class="card-link" asp-controller="Clothes" asp-action="Add">Add Clothes</a>
+    </div>
 </div>
 
 <p>
