--- a/TinyClothes/Views/Home/Index.cshtml
+++ b/TinyClothes/Views/Home/Index.cshtml
@@ -3,10 +3,19 @@
 }
 
 <h1>Tiny Clothes</h1>
+    </div>
 <p>Tiny Clothes for Tiny Things but not babies.</p>
 
+<div class="alert alert-primary" role="alert">
+    Check out our <a asp-controller="Clothes" asp-action="ShowAll" class="alert-link">Inventory</a>.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
+
 <div class="card" style="width: 18rem;">
-    <img src="~/images/DogWithGlasses.jpg" class="card-img-top" alt="Dog wearing swimming goggles"/>
+    <img src="~/images/DogWithGlasses.jpg" class="card-img-top" alt="Dog wearing swimming goggles" />
     <div class="card-body">
         <h5 class="card-title">Our Products: </h5>
         <p class="card-text">We sell tiny clothes for your pets and stuffed animals. These are not baby clothes!</p>
