--- a/TinyClothes/Views/Clothes/Add.cshtml
+++ b/TinyClothes/Views/Clothes/Add.cshtml
@@ -7,37 +7,45 @@
 <h1>Add New Clothing</h1>
 
 <form method="post">
-    <label asp-for="Size"></label>
-    <input asp-for="Size" />
-    <span asp-validation-for="Size"></span>
-    <br />
+    <div class="container">
+        <div class="row">
+            <label asp-for="Size" class="col-2"></label>
+            <input asp-for="Size" class="col-2"/>
+            <span asp-validation-for="Size" class="col-2"></span>
+        </div>
 
-    <label asp-for="Type"></label>
-    <input asp-for="Type" />
-    <span asp-validation-for="Type"></span>
-    <br />
+        <div class="row">
+            <label asp-for="Type" class="col-2"></label>
+            <input asp-for="Type" class="col-2"/>
+            <span asp-validation-for="Type" class="col-2"></span>
+            <br />
+        </div>
 
-    <label asp-for="Color"></label>
-    <input asp-for="Color" />
-    <span asp-validation-for="Color"></span>
-    <br />
+        <div class="row">
+            <label asp-for="Color" class="col-2"></label>
+            <input asp-for="Color" class="col-2" />
+            <span asp-validation-for="Color" class="col-2"></span>
+        </div>
 
-    <label asp-for="Price"></label>
-    <input asp-for="Price" />
-    <span asp-validation-for="Price"></span>
-    <br />
+        <div class="row">
+            <label asp-for="Price" class="col-2"></label>
+            <input asp-for="Price" class="col-2" />
+            <span asp-validation-for="Price" class="col-2"></span>
+        </div>
 
-    <label asp-for="Title"></label>
-    <input asp-for="Title" />
-    <span asp-validation-for="Title"></span>
-    <br />
+        <div class="row">
+            <label asp-for="Title" class="col-2"></label>
+            <input asp-for="Title" class="col-2" />
+            <span asp-validation-for="Title" class="col-2"></span>
+        </div>
 
-    <label asp-for="Description"></label>
-    <input asp-for="Description" />
-    <span asp-validation-for="Description"></span>
-    <br />
+        <div class="row">
+            <label asp-for="Description" class="col-2"></label>
+            <input asp-for="Description" class="col-2" />
+            <span asp-validation-for="Description" class="col-2"></span>
+        </div>
 
-    <input type="submit" value="Add Clothing" />
+        <input type="submit" value="Add Clothing" class="btn btn-primary"/>
 </form>
 
 @section Scripts
