--- a/TinyClothes/Views/Shared/_Layout.cshtml
+++ b/TinyClothes/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <title>@ViewData["Title"] - TinyClothes</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
 </head>
 <body>
     <header>
@@ -53,6 +54,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <span class="fas fa-shopping-cart fa-2x"></span>
             @RenderBody()
         </main>
     </div>
