--- a/TinyClothes/Views/Clothes/ShowAll.cshtml
+++ b/TinyClothes/Views/Clothes/ShowAll.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<Clothing>
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor http
 
 @{
     ViewData["Title"] = "List Clothing Inventory";
@@ -65,9 +66,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
+            @{ 
+                //Gets current URL path
+                string previousUrl = http.HttpContext.Request.Path;
+                //Adds QueryString to variable ("?page=2", etc)
+                previousUrl += http.HttpContext.Request.QueryString.Value;
+            }
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ItemId" class="btn btn-primary">Edit</a> 
                 <a asp-action="Delete" asp-route-id="@item.ItemId" class="btn btn-danger">Delete</a>
+                <a asp-action="Add" asp-controller="Cart" class="btn btn-primary" asp-route-id="@item.ItemId" asp-route-prevUrl="@previousUrl">Add To Cart</a>
             </td>
         </tr>
 }
