--- a/TinyClothes/Views/Shared/_Layout.cshtml
+++ b/TinyClothes/Views/Shared/_Layout.cshtml
@@ -14,15 +14,15 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TinyClothes</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex">
+                    <ul class="navbar-nav flex-grow-1 mr-auto">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -31,6 +31,15 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Clothes" asp-action="ShowAll">Inventory</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav flex-grow-1" style="margin-left: 60%;">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-action="" asp-controller="Cart">
+                                <span class="fas fa-shopping-cart fa-1x">
+                                    @CartHelper.GetCount(sessionInfo)
+                                </span>
+                            </a>
                         </li>
                         @if (!SessionHelper.IsUserLoggedIn(sessionInfo))
                         {
@@ -52,9 +61,8 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container" style="margin-top:3.5em">
         <main role="main" class="pb-3">
-            <span class="fas fa-shopping-cart fa-2x">@CartHelper.GetCount(sessionInfo)</span>
             @RenderBody()
         </main>
     </div>
