Added a link to the search page

--- a/TinyClothes/Views/Clothes/ShowAll.cshtml
+++ b/TinyClothes/Views/Clothes/ShowAll.cshtml
@@ -13,6 +13,9 @@
 }
 
 <p>
+    <a asp-action="Search" asp-controller="Clothes">Search</a>
+</p>
+<p>
     <a asp-action="Add"> <!--Defaults to current (Clothes) Controller-->Create New</a>
 </p>
 <table class="table">
