--- a/TinyClothes/Views/Clothes/Search.cshtml
+++ b/TinyClothes/Views/Clothes/Search.cshtml
@@ -43,14 +43,21 @@
     </div>
 </div>
 
-<div>
-    <ul>
-        @foreach (Clothing c in Model.Results)
-        {
-            <li>@c.Title : @c.Price</li>
-        }
-    </ul>
-</div>
+@if (Model.Results.Count > 0)
+{
+    <div>
+        <ul>
+            @foreach (Clothing c in Model.Results)
+            {
+                <li>@c.Title : @c.Price</li>
+            }
+        </ul>
+    </div>
+}
+else
+{
+    <p>No results to display</p>
+}
 
 <div>
     <a asp-action="ShowAll">Back to List</a>
