--- a/TinyClothes/Views/Clothes/ShowAll.cshtml
+++ b/TinyClothes/Views/Clothes/ShowAll.cshtml
@@ -18,72 +18,9 @@
 <p>
     <a asp-action="Add"> <!--Defaults to current (Clothes) Controller-->Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ItemId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Size)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Color)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ItemId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Size)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Color)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            @{ 
-                //Gets current URL path
-                string previousUrl = http.HttpContext.Request.Path;
-                //Adds QueryString to variable ("?page=2", etc)
-                previousUrl += http.HttpContext.Request.QueryString.Value;
-            }
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ItemId" class="btn btn-primary">Edit</a> 
-                <a asp-action="Delete" asp-route-id="@item.ItemId" class="btn btn-danger">Delete</a>
-                <a asp-action="Add" asp-controller="Cart" class="btn btn-primary" asp-route-id="@item.ItemId" asp-route-prevUrl="@previousUrl">Add To Cart</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+@await Html.PartialAsync("_DisplayClothes", Model)
+
 <ul class="pagination">
     @* Print Max Numbers*@
     @for (int i = 1; i <= (int)ViewData["MaxPage"]; i++)
