Implemented custom 404 and 400 page

--- a/TinyClothes/Views/Home/CustomError.cshtml
+++ b/TinyClothes/Views/Home/CustomError.cshtml
@@ -13,3 +13,4 @@ else
 {
     <p>Something Bad Happened. Please Try Again Later.</p>
 }
+<img src="~/images/kyle-glenn-hHCw3V0jg_w-unsplash (1).jpg" height="200" class="img-thumbnail rounded" alt="Guy look at woods" />
