Started implementing add to cart with JS

--- a/TinyClothes/Views/Clothes/ShowAll.cshtml
+++ b/TinyClothes/Views/Clothes/ShowAll.cshtml
@@ -39,3 +39,23 @@
         }
     }
 </ul>
+
+@section Scripts{
+    <script>
+        console.log("Add to cart script");
+        $("*[data-cart-button]").click(
+            function (event) {
+                event.preventDefault();
+
+                var currBtn = this;
+                console.log(currBtn);
+
+                var itemId = $(currBtn).attr("data-cart-itemid");
+
+                $.post("Cart/AddJS", { id : itemId })
+                    .done(function () {
+                        alert("Cart item added");
+                    });
+            });
+    </script>
+}
