--- a/TinyClothes/Views/Shared/_DisplayClothes.cshtml
+++ b/TinyClothes/Views/Shared/_DisplayClothes.cshtml
@@ -30,6 +30,7 @@
         </tr>
     </thead>
     <tbody>
+
 @foreach (var item in Model) {
         <tr>
             <td>
@@ -63,7 +64,13 @@
                     string prevUrl = http.HttpContext.Request.Path;
                     prevUrl += http.HttpContext.Request.QueryString.Value;
                 }
-                <a asp-action="Add" asp-controller="Cart" asp-route-id="@item.ItemId" asp-route-prevUrl="@prevUrl">Add To Cart</a>
+                <a asp-action="Add" 
+                   asp-controller="Cart" 
+                   asp-route-id="@item.ItemId" 
+                   data-cart-button 
+                   data-cart-itemid="@item.ItemId"
+                   class="btn btn-primary"
+                   asp-route-prevUrl="@prevUrl" >Add To Cart</a>
             </td>
         </tr>
 }
