--- a/TinyClothes/Views/Clothes/ShowAll.cshtml
+++ b/TinyClothes/Views/Clothes/ShowAll.cshtml
@@ -40,6 +40,25 @@
     }
 </ul>
 
+<div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Product added successfully</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Success!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts{
     <script>
         console.log("Add to cart script");
@@ -50,17 +69,36 @@
                 var currBtn = this;
                 console.log(currBtn);
 
+                // Disable button
+                $(currBtn).text("Adding to cart...");
+                var link = $(currBtn).attr("href");
+                if (link == "#") {
+                    return;
+                }
+                $(currBtn).attr("href", "#");
+
                 var itemId = $(currBtn).attr("data-cart-itemid");
 
-                $.post("/Cart/AddJS", { id : itemId })
+                $.post("/Cart/AddJS", { id: itemId })
                     .done(function () {
                         var currNumItems = $(".fa-shopping-cart").text();
                         console.log(currNumItems);
                         currNumItems++;
 
                         $(".fa-shopping-cart").text(currNumItems);
-                        alert("Cart item added");
-                    });
+
+                        $(".modal-header").html("<h1 style='color:green;'>Success!</h1>")
+                        $(".modal-body").text("Item added successfully");
+                        $('#staticBackdrop').modal();
+                    })
+                    .always(function () {
+                        $(currBtn).attr("href", link);
+                        $(currBtn).text("Add To Cart");
+                    }
+                        .fail(function () {
+
+                        })
+                    );
             });
     </script>
 }
